final changes before presentation

--- a/HCMS/Views/Patient/Create.cshtml
+++ b/HCMS/Views/Patient/Create.cshtml
@@ -115,7 +115,7 @@
                                             <option value="O-">O-</option>
                                             <option value="AB+">AB+</option>
                                             <option value="AB-">AB-</option>
-                                            <span asp-validation-for="@Model.medical.bloodType" class="text-danger"></span>
+                                            <span asp-validation-for="@Model.medical.bloodType" class="text-danger">Blood Type</span>
                                         </select>
                                     </div>
                                     <div class="form-group">
