--- a/HCMS/Views/Shared/_Layout.cshtml
+++ b/HCMS/Views/Shared/_Layout.cshtml
@@ -73,9 +73,9 @@
                                         <li class="nav-item">
                                             <a class="nav-link text-secondary" asp-area="" asp-controller="DoctorSchedule" asp-action="DoctorScheduleList">My Schedule List</a>
                                         </li>
-                                       @* <li class="nav-item">
+                                        <li class="nav-item">
                                             <a class="nav-link text-secondary" asp-area="" asp-controller="DoctorSchedule" asp-action="addDoctorSchedule">Add Schedule</a>
-                                        </li>*@
+                                        </li>
                                     }
 
                                     
