--- a/HCMS/Views/Case/Create.cshtml
+++ b/HCMS/Views/Case/Create.cshtml
@@ -49,12 +49,12 @@
                                 @if(User.IsInRole("Doctor")){
                                     <div class="form-group">
                                         <label asp-for="diagnosis" class="control-label">Diagnosis</label>
-                                        <textarea asp-for="diagnosis" class="form-control " style="height:200px; " />
+                                        <textarea asp-for="diagnosis" class="form-control" style="height:200px; "></textarea>
                                         <span asp-validation-for="diagnosis" class="text-danger"></span>
                                     </div>
                                     <div class="form-group">
                                         <label asp-for="treatmentPlan" class="control-label">treatment Plan</label>
-                                        <textarea asp-for="treatmentPlan" class="form-control" style="height:200px; " />
+                                    <textarea asp-for="treatmentPlan" class="form-control" style="height:200px; "></textarea>
                                         <span asp-validation-for="treatmentPlan" class="text-danger"></span>
                                     </div>
                                 }
