--- a/HCMS/Views/Case/Index.cshtml
+++ b/HCMS/Views/Case/Index.cshtml
@@ -76,7 +76,7 @@
                                                         Are you sure you want to delete this case?
                                                     </div>
                                                     <div class="modal-footer">
-                                                        <button type="button" class="btn btn-secondary spin" data-bs-dismiss="modal">Cancel</button>
+                                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                                                         <a asp-controller="Case" asp-action="Delete" asp-route-Id="@p.Id" class="btn btn-danger spin">Delete</a>
                                                     </div>
                                                 </div>
